# pgp-par

./: .gitignore  AdjustPTM.py  AminoAcidMasses.txt  AnalyzeExonGraphResults.py  AssignLFDR.py  AugmentDB.py  BN.c  BN.h  BacterialProteinInference.py  BasicStats.py  BuildConsensusSpectrum.py  BuildInspect.py  BuildLog.htm  BuildMGF.py  BuildMS2DB.c  BuildMS2DB.h  BuildMS2DB.py  BuildMZXML.py  BuildReversedExonGraph.py  BuildSimpleExonGraph.py  BuildSpliceDBIndex.py  CATMods.py  CC1.model  CC2.model  CC2.range  CCSVM1.model  CCSVM1.range  CCSVM1Phos.range  CCSVM2.model  CCSVM2.range  CCSVM2Phos.model  CCSVM2Phos.range  CMakeLists.txt  COPYING  ChargeState.c  ChargeState.py  CheckCodingStandards.py  CheckDatabases.py  CheckTags.py  ChooseIsoforms.py  (+272 more)
ArabidopsisSpecific/: CharacterizeAlternativeSplicing.py  GFF.py
Database/: Common.RS.index  Common.RS.trie  CommonContaminants.fasta  CommonContaminants.index  CommonContaminants.trie
IDontKnow/: BatchCombinePTMFeatures.py  BatchRunner.py  BatchRunnerHEK.py  BatchScorer.py
MGT/: Config.py
OneOff/: AddFixedMod.py  Claudio.Quantitation.py
PGP.Regression.Test/: FakeResults.Conflicts.txt  NC_004088.trie  RegressionTest.README
PyInspect/: PyInspect.c  PyInspect.def  PyInspect.ncb  PyInspect.sln  PyInspect.vcproj  PySpectrum.c  PySpectrum.h  PyUtils.h  Test.py
PySVM/: PySVM.c  svm.cpp
SystemTest/: BuildSimpleChromosome.txt  SimpleChromosome.trie  TestInputMod.txt  TestInputTag3.txt  TestMS2.txt  TestPMC.txt  TestSpectra.pkl  TestSpectrum.dta  Yeast.ms2
TestSuite/: DictyShort.index  DictyShort.trie  DictySmall.mzXML  OMICS04.fasta  PhosphoDB.index  Phosphopeptides.mgf  Readme.txt
cmake/: CustomCommands.cmake  PGPGenerateProfiles.cmake  Util.cmake
cmake/htc/: toolchain.cmake
cmake/ranger/: toolchain.cmake
config/: installPGP.sh  install_makeflow  install_pepnovo  install_python_vendor  install_stage_1  install_stage_2  pgp.ini.in  pgp_env_master.ranger.sh  pgp_login_env.ranger.sh  pgp_makeflow.ranger.ini  pgp_makeflow_env.ranger.sh  pgp_makeflow_env_master.sh  pgp_prepare.ranger.qsub.in  ranger_bashrc.samp  ranger_profile.samp  ranger_setup_env.sh  runPGP.ranger.qsub
config/htc/: pgp_login.rc  pgp_login.rc.in  pgp_run.mkf.in  toolchain.cmake
config/htc_bu_scc/: pgp_login.rc
config/noarch/: pgp.ini.in  pgp_run.mkf.in  pgp_task.rc.in
config/ranger/: pgp_login.rc  pgp_login.rc.in  pgp_prepare.qsub.in  pgp_run.mkf.in  pgp_run.qsub.in  toolchain.cmake
config/ranger_run/: makeflow.mpi.qsub
config/ranger_run/testing/: hostfile  makeflow.both.mpi_debug.sh  makeflow.mpi.qsub  makeflow.mpi_debug.sh  makeflow.worker.mpi_debug.sh
docs/: Copyright.html  Database.html  index.html
docs.Inspect/: Analysis.html
expat/: expat.ncb  expat.sln
expat/examples/: outline.c
expat/lib/: expat.vcproj  expat_static.vcproj  expatw.vcproj  expatw_static.vcproj  xmlparse.c
expat/lib/Debug/: BuildLog.htm  libexpat.exp  libexpat.ilk  libexpat.lib  vc70.idb  xmlparse.sbr  xmlrole.sbr  xmltok.sbr
expat/lib/Release/: BuildLog.htm  libexpat.exp  libexpat.lib  vc70.idb
index_search/: CMakeLists.txt  setup.py.in
proteogenomics/: AdjustPTM.py  AugmentDB.py  BuildMS2DB.h  CC1.range  CCSVM1Phos.model  CMakeLists.txt  CMemLeak.c  ChargeState.c  ChargeState.h  CheckTags.py  ClusterRunInspectAndRescore.py  ClusterSub.py  CodingStandards.txt  CombinePTMFeatures.py  CompareContrast.py  CompareCorrectionsInOrthologs.py  ComputePTMFeatures.py  CountScans.py  DebugInspect.in  DebugInspect2.in  DriveScorpion.py  EndpointReport.py  Errors.h  EvaluateSignalP.py  ExonSplitter.py  FTMassPost.py  FabricateProteome.py  FilterESTMappings.py  FreeMod.h  GFFIO.py  GaugeIntegerMassError.py  GelProteinAnalysis.py  GelSpotFilter.py  GeneBrowserPlot.py  GetByteOffset.py  GetGrossGenomeCoverage.py  GridRunner.py  InspectResults.py  IonScoring.h  IterativeDancikPicker.py  (+72 more)
proteogenomics/MGT/: Util.py
proteogenomics/OneOff/: AddSiteColumn.py  BiggestParentMass.py
proteogenomics/PGP.Regression.Test/: A412F072.rescore.txt  A704C037.rescore.txt  NC_004088.index
proteogenomics/PyInspect/: PyUtils.c
proteogenomics/PySVM/: svm.cpp
proteogenomics/SystemTest/: SimpleGenes.gff  TestInput.txt  TestInputTag1.txt  YeastSmall.fasta
proteogenomics/TestSuite/: OMICS04.fasta  PhosphoDB.trie
proteogenomics/config/: install_python_vendor  pgp_makeflow.jcvi.ini  pgp_makeflow.ranger.ini  pgp_makeflow_env.ranger.sh
proteogenomics/config/hide/: pgp_makeflow_env.jcvi.sh  pgp_makeflow_env.ranger.sh  pgp_makeflow_env_master.sh  prepPGPdata.ranger.qsub
proteogenomics/seqan/: ExactSearch.cpp.orig  boost-build.jam.sambox  build_ranger.sh  exactSearch.cc  indexSearch.cc  indexSearchSet.cc  test_indexSearch.py
proteogenomics/unittests/: NC_004837.6frame.trie  NC_004837.faa  NC_004837.index  NC_004838.faa  NC_004838.fna  __init__.py  inspectResultsParserTest.py  test.gff
seqan/: COPYING.PGP  ExactSearch.cpp  IndexSearch.cpp  IndexSearch.py  Jamroot  README.txt  boost-build.jam  build_ranger.sh  exactSearch  gmon.out  indexSearch  indexSearchSet  test_exactSearch.py  test_indexSearch.py  user-config.jam
test/: CMakeLists.txt  test_run.py  util.py
unittests/: NC_004837.6frame.fa  NC_004837.6frame.index  NC_004837.gbk  NC_004837.trie  NC_004838.gbk  gffTest.py  inspect.txt.bz2  inspect2.txt.bz2  inspectResultsParserTest.py  membrane.NC_004837.gff  pgFilterTest.py  pgMapperTests.py  pgPeptideTest.py  seqIOtest.py  testDBSetup.py
